# fshome

./: .gitignore  .gitmodules  .screenrc  README.md  WNDR.json  aios.json  dbReduce.py  deCONZ.json  fs20.json  fsmain.py  fssite.py  hue.json  logPrint.py  p1DSMR.json  pyhap  pyproject.toml  requirements.txt  setup.sh  setupSub.sh  tseufy.py
accessories/BLE-AIOS/: aiosAPI.py  aiosSampler.py  bluepyBase.py
accessories/BLEAIOS/: aios.json  aiosAPI.py  aiosHap.py  aiosSampler.py  bluepyBase.py  eveAPI.py
accessories/eve/: eveAPI.py
accessories/fs20/: __init__.py  dbLogger.py  devConfig.py  fs20Sampler.py  fs20_cul.py  fs20_hap.py  fsSerDevice.py  fstls.py  logPrint.py  serComm.py
accessories/hue/: hueAPI.py  hueAPIv2.py  hueCharacteristic.py  hueHap.py  hueRun.py  hueSampler.py  hueSamplerV2.py
accessories/nano33ble/: BLE33-AllSens.ino
accessories/nest/: nestAPI.py  nestAPI_req.py  nesttest.py
accessories/netgear/: aiowndr.py  netgear_HAP.py
accessories/openweather/: openweather.py  openweather_HAP.py
doc/: changelog.md  events.md
inkplate/: fsrest.py  inktls.py  klok.py  main.py  openweather.py
inkplate6/: grtls.py  inktls.py  main.py  showSign.py
lib/: __init__.py  dbLogger.py  devConfig.py  devConst.py  fsHapper.py  grtls.py  kbHit.py  logPrint.py  pyDumHap.py  sampleCollector.py  serComm.py  serDevice.py  sse_client.py  tls.py  wdt.py
setup/: __init__.py  backup.sh  dbRedu.py  fotoos.sh  ikea_otao_download.py  setup.sh  setupSub.sh  update.sh
static/: dragger.js  fsapp.tpl  fstest.html  menu.tpl  navbar.css  styles.css
(+13 files in other folders)
